--- a/index.html
+++ b/index.html
@@ -1,14 +1,51 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css" />
-    <script src="./script.js" defer></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>Library</title>
+
+    <script src="./script.js" defer></script>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
-<body>
-    
+<body class="container-fluid my-2">
+    <h1>My Library</h1>
+
+    <div class="container-fluid my-2">
+        <h2>New Book</h2>
+        <button class="btn btn-primary" type="button" id="new-book">Add book</button>
+        <form class="w-25 d-none d-grid gap-3">
+            <legend>Add Book</legend>
+            <div>
+                <label class="d-inline text-end" for="title">Title</label>
+                <input id="title" name="title" required="true"></input>
+            </div>
+            <div>
+                <label class="d-inline text-end" for="author">Author</label>
+                <input id="author" name="author" required="true"></input>
+            </div>
+            <div>
+                <label class="d-inline text-end" for="pages">Pages</label>
+                <input id="pages" name="pages" type="number" required="true"></input>
+            </div>
+            <div>
+                <label class="d-inline text-end" for="isRead">Have I read it?</label>
+                <input class="d-block" id="isRead" name="isRead" type="checkbox"></input>
+            </div>
+            <input id="submit" type="submit"></input>
+        </form>
+    </div>
+
+    <div id="display" class="container-fluid">
+        <h2>Book List</h2>
+        <button class="btn btn-primary" type="button" id="show-books">Show</button>
+        <div></div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
 </body>
 </html>
